--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -243,6 +243,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/editbutton"
         android:text="Chat"
+        android:onClick="Chat"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
