--- a/app/src/main/res/layout/activity_edit_user_ifo.xml
+++ b/app/src/main/res/layout/activity_edit_user_ifo.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.aoge.skillexchange.FirstLoginActivity">
+    tools:context="com.example.aoge.skillexchange.EditUserIfoActivity">
 
     <com.example.aoge.skillexchange.CircleImageButton
-        android:id="@+id/img_headportrait"
+        android:id="@+id/img_e_headportrait"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_centerInParent="true"
@@ -17,7 +17,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
-        android:onClick="selectHead"
+        android:src="@drawable/man"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +27,7 @@
 
 
     <LinearLayout
-        android:id="@+id/ll_sex"
+        android:id="@+id/ll_e_sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -50,13 +51,13 @@
             android:textSize="20sp" />
 
         <RadioGroup
-            android:id="@+id/sex"
+            android:id="@+id/e_sex"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <RadioButton
-                android:id="@+id/nan"
+                android:id="@+id/e_nan"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:checked="true"
@@ -65,7 +66,7 @@
                 android:textSize="20sp" />
 
             <RadioButton
-                android:id="@+id/nv"
+                android:id="@+id/e_nv"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:checked="false"
@@ -75,7 +76,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/txt_can"
+        android:id="@+id/txt_e_can"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -92,7 +93,7 @@
         app:layout_constraintVertical_bias="0.564" />
 
     <EditText
-        android:id="@+id/edt_can"
+        android:id="@+id/edt_e_can"
         android:layout_width="267dp"
         android:layout_height="34dp"
         android:layout_marginBottom="8dp"
@@ -116,7 +117,7 @@
         app:layout_constraintVertical_bias="0.572" />
 
     <TextView
-        android:id="@+id/txt_want"
+        android:id="@+id/txt_e_want"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -133,7 +134,7 @@
         app:layout_constraintVertical_bias="0.759" />
 
     <EditText
-        android:id="@+id/edt_want"
+        android:id="@+id/edt_e_want"
         android:layout_width="267dp"
         android:layout_height="34dp"
         android:layout_marginBottom="8dp"
@@ -157,7 +158,7 @@
         app:layout_constraintVertical_bias="0.769" />
 
     <Button
-        android:id="@+id/btnjoinus"
+        android:id="@+id/btnconfirm"
         android:layout_width="337dp"
         android:layout_height="47dp"
         android:layout_marginBottom="8dp"
@@ -165,8 +166,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/editbutton"
-        android:onClick="btnJoinUs"
-        android:text="@string/action_join_us_short"
+        android:onClick="btnConfirm"
+        android:text="Confirm"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -176,14 +177,14 @@
         app:layout_constraintVertical_bias="0.944" />
 
     <TextView
-        android:id="@+id/txt_welcome"
+        android:id="@+id/txt_e_welcome"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Welcome to EX!"
+        android:text="E D I T"
         android:textSize="48sp"
         android:fontFamily="casual"
         android:textColor="@color/colorAccent"
