--- a/app/src/main/res/layout/item_msg_show.xml
+++ b/app/src/main/res/layout/item_msg_show.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-         >
+        android:background="@drawable/message_left"  >
 
         <TextView
             android:id="@+id/left_msg"
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:textColor="#fff" />
+            android:textColor="#000000" />
     </LinearLayout>
 
     <LinearLayout
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-         >
+        android:background="@drawable/message_right">
 
         <TextView
             android:id="@+id/right_msg"
