--- a/app/src/main/res/layout/item_nearby_show.xml
+++ b/app/src/main/res/layout/item_nearby_show.xml
@@ -1,9 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_nearbyskill"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:background="@color/white">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/white"
+    android:padding="3dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -21,12 +23,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:id="@+id/img_show2"
+                android:id="@+id/img_n_show1"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/man"
+
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
@@ -71,4 +73,4 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-</RelativeLayout>
+</LinearLayout>
