--- a/app/src/main/res/layout/activity_choose_head.xml
+++ b/app/src/main/res/layout/activity_choose_head.xml
@@ -8,13 +8,17 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/headLayout"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_margin="24dp"
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -31,6 +35,7 @@
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
                 android:onClick="onClick1"
+                android:scaleType="fitXY"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -49,6 +54,7 @@
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
                 android:onClick="onClick2"
+                android:scaleType="fitXY"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -67,6 +73,7 @@
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
                 android:onClick="onClick3"
+                android:scaleType="fitXY"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -85,6 +92,7 @@
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
                 android:onClick="onClick4"
+                android:scaleType="fitXY"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -103,10 +111,124 @@
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
                 android:onClick="onClick5"
+                android:scaleType="fitXY"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+
+        <LinearLayout
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/headLayout_g"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_margin="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.CardView
+                app:cardBackgroundColor="@color/colorPrimarySme"
+                app:cardCornerRadius="6dp"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content">
+                <ImageButton
+                    android:id="@+id/btn_g_head1"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_below="@+id/password"
+                    android:layout_centerHorizontal="true"
+                    android:background="@android:color/transparent"
+                    android:onClick="onClickg1"
+                    android:scaleType="fitXY"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                app:cardBackgroundColor="@color/colorPrimarySme"
+                app:cardCornerRadius="6dp"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content">
+                <ImageButton
+                    android:id="@+id/btn_g_head2"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_below="@+id/password"
+                    android:layout_centerHorizontal="true"
+                    android:background="@android:color/transparent"
+                    android:onClick="onClickg2"
+                    android:scaleType="fitXY"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                app:cardBackgroundColor="@color/colorPrimarySme"
+                app:cardCornerRadius="6dp"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content">
+                <ImageButton
+                    android:id="@+id/btn_g_head3"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_below="@+id/password"
+                    android:layout_centerHorizontal="true"
+                    android:background="@android:color/transparent"
+                    android:onClick="onClickg3"
+                    android:scaleType="fitXY"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                app:cardBackgroundColor="@color/colorPrimarySme"
+                app:cardCornerRadius="6dp"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content">
+                <ImageButton
+                    android:id="@+id/btn_g_head4"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_below="@+id/password"
+                    android:layout_centerHorizontal="true"
+                    android:background="@android:color/transparent"
+                    android:onClick="onClickg4"
+                    android:scaleType="fitXY"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                app:cardBackgroundColor="@color/colorPrimarySme"
+                app:cardCornerRadius="6dp"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content">
+                <ImageButton
+                    android:id="@+id/btn_g_head5"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_below="@+id/password"
+                    android:layout_centerHorizontal="true"
+                    android:background="@android:color/transparent"
+                    android:onClick="onClickg5"
+                    android:scaleType="fitXY"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+
+
+
+
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
