--- a/app/src/main/res/layout/item_home_show.xml
+++ b/app/src/main/res/layout/item_home_show.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:id="@+id/img_show1"
+                android:id="@+id/img_h_show1"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:layout_width="80dp"
@@ -39,35 +39,79 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/txt_h_username"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:fontFamily="casual"
-                    android:text="  Name:Daniel"
-                    android:textColor="#9C27B0"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/txt_h_mainskill"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:fontFamily="casual"
-                    android:text="  Can: Basketball Coding Swimming"
-                    android:textColor="#9C27B0"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/txt_h_usernamebefore"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="   Name: "
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/txt_h_mainwant"
+                    <TextView
+                        android:id="@+id/txt_h_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="Daneil"
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:fontFamily="casual"
-                    android:text="  Want: Piano Singing Happiness"
-                    android:textColor="#9C27B0"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/txt_h_mainskillbefore"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="   Can: "
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/txt_h_mainskill"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="Basketball Coding Swimming"
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/txt_h_mainwantshow"
+                            android:layout_width="match_parent"
+                            android:layout_height="25dp"
+                            android:fontFamily="casual"
+                            android:text="   Want: "
+                            android:textColor="#9C27B0"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/txt_h_mainwant"
+                            android:layout_width="match_parent"
+                            android:layout_height="25dp"
+                            android:fontFamily="casual"
+                            android:text="Piano Singing Happiness"
+                            android:textColor="#9C27B0"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
