--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -41,6 +41,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:onClick="detailBack"
             android:background="@null"
             android:src="@drawable/ic_chevron_left_black_24dp"
             tools:layout_editor_absoluteY="41dp" />
