--- a/app/src/main/res/layout/activity_msg.xml
+++ b/app/src/main/res/layout/activity_msg.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="btnBack"
+        android:onClick="btnmsgBack"
         android:background="@null"
         android:src="@drawable/ic_chevron_left_black_24dp" />
 
@@ -27,7 +27,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:fontFamily="casual"
-        android:text="Daniel Ge"
         android:textColor="@color/white"
         android:textSize="20sp" />
 </RelativeLayout>
