--- a/app/src/main/res/layout/item_home_show.xml
+++ b/app/src/main/res/layout/item_home_show.xml
@@ -46,7 +46,7 @@
 
                     <TextView
                         android:id="@+id/txt_h_usernamebefore"
-                        android:layout_width="match_parent"
+                        android:layout_width="80dp"
                         android:layout_height="25dp"
                         android:fontFamily="casual"
                         android:text="   Name: "
@@ -71,7 +71,7 @@
                     android:orientation="horizontal">
                     <TextView
                         android:id="@+id/txt_h_mainskillbefore"
-                        android:layout_width="match_parent"
+                        android:layout_width="80dp"
                         android:layout_height="25dp"
                         android:fontFamily="casual"
                         android:text="   Can: "
@@ -95,7 +95,7 @@
                         android:orientation="horizontal">
                         <TextView
                             android:id="@+id/txt_h_mainwantshow"
-                            android:layout_width="match_parent"
+                            android:layout_width="80dp"
                             android:layout_height="25dp"
                             android:fontFamily="casual"
                             android:text="   Want: "
