--- a/app/src/main/res/layout/item_nearby_show.xml
+++ b/app/src/main/res/layout/item_nearby_show.xml
@@ -39,35 +39,79 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/txt_n_username"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:fontFamily="casual"
-                    android:text="  Name:Daniel"
-                    android:textColor="#9C27B0"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/txt_n_mainskill"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:fontFamily="casual"
-                    android:text="  Can: Basketball Coding Swimming"
-                    android:textColor="#9C27B0"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/txt_n_usernamebefore"
+                        android:layout_width="80dp"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="   Name: "
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/txt_n_mainwant"
+                    <TextView
+                        android:id="@+id/txt_n_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="Daneil"
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:fontFamily="casual"
-                    android:text="  Want: Piano Singing Happiness"
-                    android:textColor="#9C27B0"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/txt_n_mainskillbefore"
+                        android:layout_width="80dp"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="   Can: "
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/txt_n_mainskill"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="Basketball Coding Swimming"
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/txt_n_mainwantshow"
+                        android:layout_width="80dp"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="   Want: "
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/txt_n_mainwant"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:fontFamily="casual"
+                        android:text="Piano Singing Happiness"
+                        android:textColor="#9C27B0"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
