--- a/app/src/main/res/layout-large/activity_first_login.xml
+++ b/app/src/main/res/layout-large/activity_first_login.xml
@@ -11,18 +11,18 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_centerInParent="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="selectHead"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
+        android:onClick="selectHead"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.249" />
+        app:layout_constraintVertical_bias="0.169" />
 
 
     <LinearLayout
@@ -30,48 +30,47 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.117"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.398">
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/gender"
+            android:textSize="20sp" />
 
         <RadioGroup
             android:id="@+id/sex"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            tools:layout_marginLeft="10dp"
-            tools:layout_marginRight="10dp">
-
-            <RadioButton
-                android:id="@+id/nv"
-                android:layout_width="88dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:checked="false"
-                android:text="@string/female"
-                android:textSize="20sp"
-                tools:textSize="14sp" />
+            android:orientation="horizontal">
 
             <RadioButton
                 android:id="@+id/nan"
-                android:layout_width="88dp"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:checked="true"
                 android:gravity="center"
                 android:text="@string/male"
-                android:textSize="20sp"
-                tools:layout_marginLeft="10dp"
-                tools:textSize="14sp" />
+                android:textSize="20sp" />
 
+            <RadioButton
+                android:id="@+id/nv"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:checked="false"
+                android:text="@string/female"
+                android:textSize="20sp" />
         </RadioGroup>
     </LinearLayout>
 
@@ -79,30 +78,29 @@
         android:id="@+id/txt_can"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:text="You can:"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintHorizontal_bias="0.053"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:textSize="14sp" />
+        app:layout_constraintVertical_bias="0.564" />
 
     <EditText
         android:id="@+id/edt_can"
-        android:layout_width="292dp"
-        android:layout_height="31dp"
+        android:layout_width="267dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-
-        android:layout_marginBottom="8dp"
         android:background="@drawable/editsharp"
+
         android:hint=" enter your skills"
         android:inputType="textEmailAddress"
         android:maxLength="70"
@@ -112,40 +110,38 @@
         android:textColorHint="@color/hint1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.588" />
+        app:layout_constraintVertical_bias="0.572" />
 
     <TextView
         android:id="@+id/txt_want"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:text="You want:"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.032"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.698"
-        tools:textSize="14sp" />
+        app:layout_constraintVertical_bias="0.759" />
 
     <EditText
         android:id="@+id/edt_want"
-        android:layout_width="289dp"
+        android:layout_width="267dp"
         android:layout_height="34dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/editsharp"
+
         android:hint=" enter what you want to learn"
         android:inputType="textEmailAddress"
         android:maxLength="70"
@@ -155,49 +151,48 @@
         android:textColorHint="@color/hint1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.779" />
+        app:layout_constraintVertical_bias="0.769" />
 
     <Button
         android:id="@+id/btnjoinus"
-        android:layout_width="289dp"
-        android:layout_height="36dp"
+        android:layout_width="337dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/editbutton"
         android:onClick="btnJoinUs"
         android:text="@string/action_join_us_short"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.91" />
+        app:layout_constraintVertical_bias="0.944" />
 
     <TextView
         android:id="@+id/txt_welcome"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="casual"
         android:text="Welcome to EX!"
+        android:textSize="48sp"
+        android:fontFamily="casual"
         android:textColor="@color/colorAccent"
-        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.019"
-        tools:paddingLeft="10dp"
-        tools:paddingRight="10dp"
-        tools:textSize="30sp" />
+        app:layout_constraintVertical_bias="0.016" />
 
 
 </android.support.constraint.ConstraintLayout>
